-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.7, 5.13.1, 5.14.1
-
Desktop Linux XCB + Wacom Tablet
-
-
8e822e981d91e688799c8670f11dfdf6aaf9e0d1 (qt/qtdeclarative/5.15)
Using a tablet like Wacom with stylus and eraser doesn't work with QML items, such as TapHandler.
Setting:
app.setAttribute(Qt::AA_SynthesizeMouseForUnhandledTouchEvents, false);
app.setAttribute(Qt::AA_SynthesizeMouseForUnhandledTabletEvents, false);
Makes it not working at all.
Please run the example code bellow:
import QtQuick 2.12 import QtQuick.Window 2.12 Window { id: root visible: true width: 1024 height: 768 title: qsTr("Hello World") Item { id: glassPane z: 10000 anchors.fill: parent PointHandler { id: handler acceptedDevices: PointerDevice.Stylus | PointerDevice.Eraser target: Rectangle { parent: glassPane color: "red" visible: handler.active x: handler.point.position.x - width / 2 y: handler.point.position.y - height / 2 width: 20; height: width; radius: width / 2 } } } }
In case the documentation should mention it, that it is not supported.
- relates to
-
QTBUG-116505 HoverHandler is broken when using a stylus
-
- Closed
-
- resulted in
-
QTBUG-93947 [REG: 5.14->5.15.0] MouseArea does not work if HoverHandler is also used
-
- Closed
-
-
QTBUG-84641 Allow handling of tablet events in QQuickItem
-
- Reported
-